<resources>
    <string name="app_name">Calculator</string>
    <string name="title">Kalkulator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="enter">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="razy">*</string>
    <string name="dziel">÷</string>
    <string name="sqrt">√</string>
    <string name="fact">n!</string>
    <string name="kwa">n²</string>
    <string name="dot">.</string>
</resources>